--- a/src/modules/homepage/components/about/style.css
+++ b/src/modules/homepage/components/about/style.css
@@ -1,4 +1,3 @@
-
 #about-us {
   height: 40vh;
   width: 100%;
@@ -21,7 +20,7 @@
   text-align: center;
 }
 #about-us-in h3 {
-  font-size: 54px;
+  font-size: 64px;
   font-weight: 800;
   margin-bottom: 30px;
 }
@@ -30,9 +29,8 @@
   line-height: 26px;
 }
 
-
 #green-div {
-  margin-top: 30px ;
+  margin-top: 30px;
   height: 30vh;
   display: flex;
   align-items: center;
@@ -53,4 +51,44 @@
   height: 100%;
   object-fit: cover;
   width: 14%;
+}
+@media (max-width: 768px) {
+  #about-us-in h3 {
+    font-size: 36px;
+    margin-top: -30px;
+
+  }
+  #about-us-in p {
+    margin-top: -30px;
+    font-size: 10px;
+  }
+  #about-us img{
+    height: 150px;
+    width: 150px;
+  }
+  #green-div h4{
+    line-height: 40px;
+    font-size: 17px;
+
+  }
+}
+@media (max-width: 450px) {
+  #about-us-in h3 {
+    font-size: 20px;
+
+  }
+  #about-us-in p {
+    font-size: 7px;
+    line-height: 10px;
+  }
+  #about-us img{
+    height: 100px;
+    margin: 0 -90px;
+    width: 100px;
+  }
+  #green-div h4{
+    line-height: 20px;
+    font-size: 13px;
+
+  }
 }
