--- a/src/modules/nav & foter/components/navbar/style.css
+++ b/src/modules/nav & foter/components/navbar/style.css
@@ -12,6 +12,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  background-color: black;
   color: #fff;
 }
 
@@ -53,7 +54,9 @@ body {
     display: inline-block;
     z-index: 999;
   }
-  #nav{
+   #nav{
+    display: none;
+    /*
     width: 100vw;
     height: 100vh;
     position: absolute;
@@ -66,7 +69,7 @@ body {
     flex-direction: column;
     text-align: center;
     transform: translateX(100%);
-
-  }
+*/
+  } 
 }
 
